Fix wrapping hub sheet tab.

--- a/css/deathinspace.css
+++ b/css/deathinspace.css
@@ -780,6 +780,11 @@
   border-bottom: 1px solid var(--hub-background-color);
   border-top: 1px solid var(--hub-background-color);
   color: white;
+  display: flex;
+  justify-content: space-around;
+}
+.deathinspace.sheet.hub .sheet-tabs .item {
+  flex: 0 0 170px;
 }
 .deathinspace.sheet.hub .sheet-tabs .item:hover {
   color: black;
